# Belief-Propagation-Simulator

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Class_diagram.drawio  DCOP_base.py  MAIN.py  MANIFEST.in  Makefile  OPTIMIZATIONS_IMPLEMENTED.md  OPTIMIZATION_REPORT.md  PYPI_PACKAGING_MODEL.md  PYPI_READINESS_REPORT.md  PYPI_RELEASE_SUMMARY.md  Practical_1_Introduction_to_PyTorch.ipynb  README.md  REFACTORING.md  RELEASE_GUIDE.md  TEST_RESULTS.md  TEST_STATUS.md  Test Results - pytest_in_test_damping_one_cycle_py.html  USER_GUIDE.md  Untitled Diagram.drawio  agents.drawio  bug_analysis_report.md  classes.drawio  config_creator.ipynb  config_creator.py  config_generator.py  create_factor_graphs.py  cycle_bp_exact_jacobian_networkx.ipynb  debugging.py  experiments.py  general_checks.ipynb  global_mapping.py  main.py  (+28 more)
BP_base/: __init__.py  agents.py  bp_computators.py  bp_engine.py  components.py  factor_graph.py  iteration.py
DCOP_base/: PotentialTable.py  agent.py  interfaces.py  measurements.py  node.py
abstract_base/: Node.py  PotentialTable.py  bp_engine.py  graph.py  interfaces.py  iteration.py  node.py
base_all/: DCOP_base.py  agents.py  components.py  protocols.py
base_models/: __init__.py  agents.py  components.py  dcop_base.py  protocols.py  utils.py
belief_propagation_simulator/: __init__.py
bp_base/: DCOP_base.py  __init__.py  agents.py  bp_computators.py  bp_engine.py  bp_engine_base.py  components.py  computators.py  configs.py  engine_base.py  engine_components.py  engines.py  engines_realizations.py  factor_graph.py  iteration.py  simulator.py  special_agents.py  types.py  typing.py
bp_variations/: bp_computators.py  computators.py  factor_graph.py  min_sum.py  node.py
config/: create_factor_graph_config.py  create_factor_graphs.py  creation_idea.md  factor_graph_config.py  hyper_parameters_config.py
configs/: __init__.py  global_config_mapping.py  hyper_parameters_config.py  loggers.py
docs/: AGENTS.md  ARCHITECTURE_TREE.md  CHANGELOG.md  COMPUTATOR_GUIDE.md  SNAPSHOTS_GUIDE.md  Snapshots Guide.rst  conf.py  contributing.rst  creation_idea.md  examples.rst  howto_snapshots.md  index.rst  installation.rst  quickstart.rst  user_guide.rst
examples/: README_NOTEBOOK.md  analysis_large_random.py  analysis_ring_scfg.py  analyzer_complete_tutorial.ipynb  analyzer_ring_demo.py  computator_switching_example.py  debugging.py  quick_start.py  run_simulator.py  search_map_fg.py  test_diffusion_engine.py  torch_softmin_demo.py  trainable_bp_example.py  vis_example_2.ipynb  visualization example.ipynb
experiments/: README.md  generate_fig58_csv.py  reproduce_figure.py
experiments-splitting-damping/: bistability_check.py  butterfly_convergence.py
graph_configs/: cycle-3-min-sum-uniform-0-10.pkl
notebooks/: 01_getting_started_tutorial.ipynb  02_comparing_engines_and_policies.ipynb  03_real_world_applications.ipynb  04_step_by_step_tutorial.ipynb  05_split_oscillation_merge.ipynb  analyzer_reporting_demo.ipynb  config_creator.ipynb  curve_utils.py  difference_check.ipynb  leminscate_all_utils_demo.ipynb  leminscate_splitting.ipynb  message_passing_visualization.ipynb  one_run.ipynb  plot_results.ipynb  reproduce_figures_5_8_executed.ipynb  run_simulations.ipynb  show_roie.ipynb  snapshot_cycle_lemniscate_demo.ipynb  snapshots_simulator_demo.ipynb  softmin_torch_walkthrough.ipynb  split_tail_example.ipynb  split_tail_example_executed.ipynb  split_test.ipynb  splitting_convergance.ipynb  splitting_convergance_old.ipynb  step_by_step.ipynb  utils.py  vis_example_2.ipynb  visualization example.ipynb
policies/: Computator.py  abstract.py  bp_policies.py  compute_message_policy.py  convergance.py  cost_reduction.py  damping.py  message_pruning.py  node_add_policy.py  node_neighbour_adding.py  normalize_cost.py  pipelines.py  policies.py  save.py  splitting.py  stopping.py  updator.py
results/: bp_results_1000_cycles.json  ring_snapshots.json
routers/: algorithm.py  factor.py  initialize.py  variable.py
saved_for_later/: Computator.py  PotentialTable.py  decorators.py
search/: README.md  __init__.py  demo_search.py  search_agents.py  search_computator.py  search_engine.py
tests/: PotentialTable.py  __init__.py  __test_creation.py  class_tests.py  compare_beliefs.py  conftest.py  debug_graph.py  message_test.py  random_creation_tests.py  reproduce_split_calc.py  test_bp_agents_post_init.py  test_bp_base.py  test_bp_base_additional.py  test_bp_base_basic.py  test_bp_engine.py  test_bp_engine_cycle.py  test_bp_engine_hooks.py  test_bp_engine_long_run.py  test_bp_engine_units.py  test_computator_interface.py  test_computators.py  test_config_system.py  test_config_validation.py  test_configs_mapping.py  test_constant_damping_policy.py  test_convergence.py  test_core_agents.py  test_cost_reduction.py  test_cost_table_creation.py  test_creation.py  test_damping.py  (+50 more)
(+638 files in other folders)
