[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 120

[project]
name = "propflow"
version = "0.1.0"
description = "Highly configurable belief propagation simulator for factor graphs"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{name = "Or Muller"}]
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "belief-propagation",
    "factor-graphs",
    "graphical-models",
    "inference",
    "optimization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Framework :: Matplotlib",
]

# Runtime dependencies
dependencies = [
    "networkx>=3.0.0,<4.0.0",
    "numpy>=2.0.0,<3.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "scipy>=1.10.0,<2.0.0",
    "dash>=2.15.0,<3.0.0",
    "dash_cytoscape>=1.0.0,<2.0.0",
    "colorlog>=6.0.0,<7.0.0",
    "pandas>=2.0.0,<3.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "psutil>=5.9.0,<8.0.0",
]

[project.optional-dependencies]
# Development extras
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "black",
    "pylint",
    "jupyter",
    "build",
    "twine",
    "pre-commit"
]

[project.scripts]
bp-sim = "propflow.cli:main"
